# heliport

./: .gitignore  CHANGELOG.md  Cargo.toml  LANGS.md  README.md  build.rs  languagelist  pyproject.toml
.github/workflows/: release.yml  run-tests.yml
LanguageModels/: abk.LowGramModel1  abk.LowGramModel2  abk.LowGramModel3  abk.LowGramModel4  abk.LowGramModel5  abk.LowGramModel6  abk.unigram.model  abk.word.model  ace.bigram.model  ace.hexagram.model  ace.quadgram.model  ace.quingram.model  ace.trigram.model  ace.unigram.model  ace.word.model  ace_Arab.LowGramModel1  ace_Arab.LowGramModel2  ace_Arab.LowGramModel3  ace_Arab.LowGramModel4  ace_Arab.LowGramModel5  ace_Arab.LowGramModel6  ace_Arab.LowWordModel  ace_Latn.LowGramModel1  ace_Latn.LowGramModel2  ace_Latn.LowGramModel3  ace_Latn.LowGramModel4  ace_Latn.LowGramModel5  ace_Latn.LowGramModel6  ace_Latn.LowWordModel  ace_arab.LowGramModel2  ace_arab.LowGramModel3  ace_arab.LowGramModel4  ace_arab.LowGramModel5  ace_arab.LowGramModel6  ace_arab.unigram.model  ace_arab.word.model  ace_latn.LowGramModel1  ace_latn.LowGramModel4  ace_latn.LowGramModel5  ace_latn.LowWordModel  (+5268 more)
docs/: train.md
heliport-model/: Cargo.toml
heliport-model/src/: lang.rs  languagemodel.rs  lib.rs
src/: cli.rs  download.rs  identifier.rs  lang.rs  languagemodel.rs  lib.rs  python.rs  trainer.rs  utils.rs
src/cli/: binarize.rs  create_models.rs  download.rs  identify.rs  mod.rs
tests/: cli.rs
