[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "heliport"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.scripts]
heliport = "heliport:cli_run"
heliport-convert = "heliport:cli_convert"
heliport-download = "heliport:cli_download"

[tool.maturin]
features = ["pyo3/extension-module"]
