[build-system]
requires = ["maturin>=1.8.0,<2.0"]
build-backend = "maturin"

[project]
name = "heliport"
description = "Fast and accurate language identifier"
requires-python = ">=3.8"
authors = [
    { "name" = "Jaume Zaragoza", "email" = "jzaragoza@prompsit.com" }
]
maintainers = [
    { "name" = "Jaume Zaragoza", "email" = "jzaragoza@prompsit.com" }
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Text Processing :: Linguistic",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dynamic = ["version"]

[project.scripts]
heliport = "heliport:cli_run"

[tool.maturin]
features = ["python", "pyo3/extension-module"]
data = "heliport.data"
